# libBATools

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.h.in
demo/: CMakelists.txt  test_libbatools.cpp
lib/: CMakelists.txt  libBATools.cpp  libBATools.h  typedefImpl.hpp
